# carbon-oracle

./: .gitignore  111.md  README.md  pyproject.toml  run_demo.sh
src/: main.py
src/agent/: engine.py
src/ai/: provider.py
src/config/: config.toml
src/core/: config_loader.py  database.py  knowledge_base.py  types.py
src/features/: extract.py
src/mock/: generator.py
src/models/: predictor.py  rf_model.pkl
src/reports/: analyst.py  visualizer.py
src/sensors/: interface.py
